fixed scrolling collapse nnav bar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -18,6 +18,10 @@ hr {
 /* Header */
 
 
+.navbar-collapse.in {
+    overflow-y: visible;
+}
+
 nav .logo {
 	height: 80px;
 }
